Added some good amount of changes.
Changes:
Links the css file
Removes the vercel testing headers
Added the logo and the title in the main page.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cash Compass</title>
     <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+    <link rel="stylesheet" href="styles.css">
+    <title>Cash Compass</title>
 </head>
 <body>
-    <h1>Vercel Test</h1>
-    <h2>Test2</h2>
+    <div class="container">
+        <img class="logo" src="img/favicon.png">
+        <h1>Cash Compass</h1>
+    </div>
 </body>
-</html> 
+</html>
