--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
                 <button class="reflect-button" id="reflect-btn">Reflect</button>
             </div>
         </div>
+        <div class="balance-section">
+            <h3 class="balance-title">Total Balance: <span id="total-balance">0</span> PHP</h3>
+            <div class="input-group-balance">
+                <label class="incLabel" for="income-input">Income Amount:</label>
+                <input type="number" id="income-input">
+                <button class="income-button" id="add-income-btn">Add Income</button>
+            </div>
+        </div>
+        </div>
     </div>
 </body>
 </html>
