--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
     <title>Cash Compass</title>
 </head>
 <body>
@@ -62,12 +63,11 @@
             <button id="add-btn">Add</button>
         </div>
         <div class="expenses-list">
-            <div class="expenses-list">
-                <div class="expenses-list-header">
-                    <button id="edit-button">Edit</button>
-                    <h2>Expenses List</h2>
-                    <button id="sort-button">Sort</button>
-                </div>          
+            <div class="expenses-list-header">
+                <button id="edit-button">Edit</button>
+                <h2>Expenses List</h2>
+                <button id="sort-button">Sort</button>
+            </div> 
             <table>
                 <thead>
                     <tr>
@@ -91,5 +91,6 @@
             </table>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
