Trying to show the logo and favicon in the uploaded website

--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" type="image/png" href="/HarleyGotardo.github.io/img/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
     <title>Cash Compass</title>
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <img class="logo" src="/HarleyGotardo.github.io/img/favicon.png">
+            <img class="logo" src="img/favicon.png">
             <h1>Cash Compass</h1>
         </div>
         <h5 style="text-align: center;"></h5>
