--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img class="logo" src="img/favicon.png">
+            <img class="logo" src="img/logo.png">
             <h1>Cash Compass</h1>
         </div>
         <h5 style="text-align: center;"></h5>
