--- a/src/index.html
+++ b/src/index.html
@@ -48,14 +48,14 @@
 					<div class="input-group">
 						<label for="category-select">Category:</label>
 						<select id="category-select">
-							<option value="Food & Beverage">Food & Beverage</option>
+							<!-- <option value="Food & Beverage">Food & Beverage</option>
 							<option value="Rent">Rent</option>
 							<option value="Transport">Transport</option>
 							<option value="Relaxing">Relaxing</option>
 							<option value="Groceries">Groceries</option>
 							<option value="Entertainment">Entertainment</option>
 							<option value="Health & Fitness">Health & Fitness</option>
-							<option value="Utilities">Utilities</option>
+							<option value="Utilities">Utilities</option> -->
 						</select>
 						<br>
 						<label for="custom-category-input">Custom Category:</label>
