--- a/src/index.html
+++ b/src/index.html
@@ -46,21 +46,13 @@
 				</div>
 				<div class="input-section">
 					<div class="input-group">
-						<label for="category-select">Category:</label>
-						<select id="category-select">
-							<!-- <option value="Food & Beverage">Food & Beverage</option>
-							<option value="Rent">Rent</option>
-							<option value="Transport">Transport</option>
-							<option value="Relaxing">Relaxing</option>
-							<option value="Groceries">Groceries</option>
-							<option value="Entertainment">Entertainment</option>
-							<option value="Health & Fitness">Health & Fitness</option>
-							<option value="Utilities">Utilities</option> -->
-						</select>
-						<br>
-						<label for="custom-category-input">Custom Category:</label>
+						<label for="custom-category-input">Add Category:</label>
 						<input type="text" id="custom-category-input">
 						<button id="add-category-btn">Add Category</button>
+						<label for="category-select">Category Selection:</label>
+						<select id="category-select">
+						</select>
+						<br>
 					</div>
 					<div class="input-group">
 						<label for="amount-input">Expense Amount:</label>
