Improved the attributes of all buttons

--- a/src/index.html
+++ b/src/index.html
@@ -62,14 +62,15 @@
 						<label for="date-input">Date:</label>
 						<input type="date" id="date-input">
 					</div>
-					<button id="add-btn">Add</button>
+					<button class="addButton" id="add-btn">Add</button>
 				</div>
 			</div>
 			<div class="expenses-list">
 				<div class="expenses-list-header">
 					<h2>Expenses List</h2>
-					<button id="sort-button">Sort</button>
+					
 				</div>
+				<button class="sortButton" id="sort-button">Sort Expenses</button>
 				<table>
 					<thead>
 						<tr>
