Implemented the sorting of the expense list feature (Descending order)

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
 					<h2>Expenses List</h2>
 					
 				</div>
-				<button class="sortButton" id="sort-button">Sort Expenses</button>
+				<button class="sortButton" id="sort-button">Sort expenses descending order ↧</button>
 				<table>
 					<thead>
 						<tr>
