Implement new feature: Download data as a JSON file and import functionality
This commit introduces a new feature to the web app, enabling users to download all saved data, including expenses, total balance, and custom categories, in a JSON file format. The download functionality ensures that data can be easily saved and shared.

Additionally, an import button has been implemented, allowing users to select a JSON file from their local file system. Upon selection, the content of the JSON file is integrated into the web app, updating the expenses, total balance, and custom categories accordingly. (The import is not yet complete)

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
 			<img class="logo" src="img/logo.png">
 			<h1>Cash Compass</h1>
 		</div>
+		<button id="impButton" class="importButton"><image class="importimage" src="img/import.png"> <h3 class="importext">Import Data</h3></image></button>
 		<div class="Main">
 			<div class="container">
 				<div class="input">
@@ -92,6 +93,7 @@
 				</table>
 			</div>
 		</div>
+		<button id="download-btn" class="downloadButton"><image class="dLimage" src="img/dLbutton.png"> <h3 class="dLtext">Download Data</h3></image></button>
 		<script src="script.js"></script>
 	</body>
 </html>
