Improved the Welcome page UI

--- a/src/index.html
+++ b/src/index.html
@@ -27,9 +27,9 @@
         </ul>
     </div>
     <div class="startButton">
-        <button>
-            <a id="start" class="startTracking" href="mainPage.html">Start Tracking Expenses</a>
-        </button>
-    </div>
+		<button class="start-btn" id="start-btn">
+		  <a id="start" class="startTracking" href="mainPage.html">Start Tracking Expenses</a>
+		</button>
+	  </div>	  
 </body>
 </html>
