Made improvements to the implementation of the reflect functionality

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
         <ul>
             <li>Add Income: Easily add a new balance to your overall money. This feature is perfect for when you receive your paycheck or any additional income. Keep track of your income and watch your savings grow.</li> <br>
             <li>Add Expense: Record your daily expenses in a few simple steps. Just input a custom category, then select a category, input the amount spent, and the date of the transaction. Cash Compass will automatically update your balance.</li> <br>
-            <li>Reflect: Update the overall balance of your money with the input. This feature allows you to correct any discrepancies or adjust your balance for any reason.</li> <br>
+            <li>Reflect: Update the overall balance of your money with the input. This feature allows you to correct any discrepancies or adjust your balance for any reason. Input must be less than the total current balance.</li> <br>
             <li>Expense List Management: View, sort, and delete your expenses with ease. The app provides a comprehensive list of all your expenses, allowing you to manage and analyze your spending habits better.</li> <br>
             <li>Import and Export Data: You can download your browser data file as a json file. And also has the capability to import data from a json file.</li>
         </ul>
