Added improvements in delete expense functionality

--- a/src/mainPage.html
+++ b/src/mainPage.html
@@ -61,14 +61,14 @@
 						<br>
 					</div>
 					<div class="input-group">
-						<label for="amount-input">Expense Amount:</label>
-						<input type="number" id="amount-input">
-					</div>
-					<div class="input-group">
 						<label for="date-input">Date:</label>
 						<input type="date" id="date-input">
 					</div>
-					<button class="addButton" id="add-btn">Add</button>
+					<div class="input-group">
+						<label for="amount-input">Expense Amount:</label>
+						<input type="number" id="amount-input">
+					</div>
+					<button class="addButton" id="add-btn">Add Expense</button>
 				</div>
 			</div>
 			<div class="expenses-list">
