Added a header for the add expense section

--- a/src/mainPage.html
+++ b/src/mainPage.html
@@ -51,11 +51,12 @@
 					</div>
 				</div>
 				<div class="input-section">
+					<h3>Add Expense</h3>
 					<div class="input-group">
-						<label for="custom-category-input">Add Category:</label>
+						<label class="categoryClass" for="custom-category-input">Add Category:</label>
 						<input type="text" id="custom-category-input">
 						<button class="addCategoryBtn" id="add-category-btn">Add Category</button>
-						<label for="category-select">Category Selection:</label>
+						<label class="categorySelectClass" for="category-select">Category Selection:</label>
 						<select id="category-select">
 						</select>
 						<br>
