Only json file can be accepted in importing data file

--- a/src/mainPage.html
+++ b/src/mainPage.html
@@ -18,7 +18,7 @@
 		<div>
 			<h3>Import Data</h3>
 			<div class="fileInput">
-				<input type="file" id="import">
+				<input type="file" id="import" accept=".json">
 			</div>
 		</div>	
 		<div class="Main">
