--- a/src/mainPage.html
+++ b/src/mainPage.html
@@ -25,7 +25,7 @@
 			<div class="container">
 				<div class="input">
 					<div class="totalbal">
-						<h3>Total Balance:</h3>
+						<h3>Money Balance:</h3>
 						<div class="bal">
 							<span id="total-balance">0</span>
 							<span class="unit">PHP</span>
