--- a/src/index.html
+++ b/src/index.html
@@ -5,32 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="welcomePageStyles.css">
     <link rel="shortcut icon" type="image/png" href="img/cashcompass.png">
     <title>Cash Compass</title>
 </head>
-<body>
+<body class="glossy-background">
     <div class="header">
         <img class="logo" src="img/logo.png">
         <h1>Cash Compass</h1>
     </div>
     <div class="body">
-        <h1 class="greetings">WELCOME</h1>
-        <p style="text-align: center; margin-left: 40px;">Cash Compass is a personal finance management web application designed to help you keep track of your expenses and balance. With features like add income, add expense, and reflect, Cash Compass makes it simple and convenient to manage your finances.</p>
-        <h3 class="feat">FEATURES</h3>
+        <h1 class="greetings">Welcome</h1>
+        <p>Cash Compass is a personal finance management web application designed to help you keep track of your expenses and balance. With features like add income, add expense, and reflect, Cash Compass makes it simple and convenient to manage your finances.</p>
+        <h3 class="feat">Features</h3>
         <ul>
-            <li>Add Income: Easily add a new balance to your overall money. This feature is perfect for when you receive your paycheck or any additional income. Keep track of your income and watch your savings grow.</li> <br>
-            <li>Add Expense: Record your daily expenses in a few simple steps. Just input a custom category, then select a category, input the amount spent, and the date of the transaction. Cash Compass will automatically update your balance.</li> <br>
-            <li>Reflect: Update the overall balance of your money with the input. This feature allows you to correct any discrepancies or adjust your balance for any reason. Input must be less than the total current balance.</li> <br>
-            <li>Expense List Management: View, sort, and delete your expenses with ease. The app provides a comprehensive list of all your expenses, allowing you to manage and analyze your spending habits better.</li> <br>
-            <li>Import and Export Data: You can download your browser data file as a json file. And also has the capability to import data from a json file.</li>
+            <li>Add Income: Easily add a new balance to your overall money. This feature is perfect for when you receive your paycheck or any additional income. Keep track of your income and watch your savings grow.</li>
+            <li>Add Expense: Record your daily expenses in a few simple steps. Just input a custom category, then select a category, input the amount spent, and the date of the transaction. Cash Compass will automatically update your balance.</li>
+            <li>Reflect: Update the overall balance of your money with the input. This feature allows you to correct any discrepancies or adjust your balance for any reason. Input must be less than the total current balance.</li>
+            <li>Expense List Management: View, sort, and delete your expenses with ease. The app provides a comprehensive list of all your expenses, allowing you to manage and analyze your spending habits better.</li>
+            <li>Import and Export Data: You can download your browser data file as a JSON file. And also have the capability to import data from a JSON file.</li>
         </ul>
     </div>
     <div class="startButton">
-		<button class="start-btn" id="start-btn">
-		  <a id="start" class="startTracking" href="mainPage.html">Start Tracking Expenses</a>
-		</button>
-	  </div>	  
+        <button class="start-btn" id="start-btn">
+            <a id="start" class="startTracking" href="mainPage.html">Start Tracking Expenses</a>
+        </button>
+    </div>
 </body>
 </html>
