Changed "reflect" into Edit balance.

--- a/src/mainPage.html
+++ b/src/mainPage.html
@@ -33,9 +33,9 @@
 					</div>
 					<div class="balances">
 						<div class="reflection-section">
-							<h3>Reflect</h3>
+							<h3>Edit Balance</h3>
 							<div class="input-group">
-								<label class="reflect-label" for="reflect-input">Enter amount to reflect:</label>
+								<label class="reflect-label" for="reflect-input">Enter amount to edit:</label>
 								<input type="number" id="reflect-input">
 							</div>
 							<button class="reflectBtn"id="reflect-btn">Reflect</button>
