--- a/src/mainPage.html
+++ b/src/mainPage.html
@@ -35,7 +35,7 @@
 						<div class="reflection-section">
 							<h3>Edit Balance</h3>
 							<div class="input-group">
-								<label class="reflect-label" for="reflect-input">Enter amount to edit:</label>
+								<label class="reflect-label" for="reflect-input">Enter New Balance Amount:</label>
 								<input type="number" id="reflect-input">
 							</div>
 							<button class="reflectBtn"id="reflect-btn">Reflect</button>
