--- a/src/mainPage.html
+++ b/src/mainPage.html
@@ -5,10 +5,15 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@300;400;500&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="styles.css">
 		<link rel="shortcut icon" type="image/png" href="img/cashcompass.png">
 		<title>Cash Compass</title>
+		<style>
+			body, h1, h2, h3, span, label, input, button, select, option {
+				font-family: 'Google Sans', sans-serif;
+			}
+		</style>
 	</head>
 	<body>
 		<div class="header">
